# stamp-app

stamp-api/: .gitignore  README.md
stamp-api/app/: main.py
stamp-api/app/api/: auth.py  stamp.py
stamp-api/app/dependencies/: authorisation.py
stamp-api/app/helpers/: db.py  jwt.py  password_manager.py
stamp-api/app/models/: User.py
stamp-api/app/services/: pdf_stamper.py
stamp-backend/: .gitignore  pyproject.toml
stamp-backend/app/: main.py
stamp-backend/app/api/: auth.py
stamp-backend/app/helpers/: jwt.py  remove_file.py
stamp-backend/app/models/: Stamp.py  StampedPDF.py
stamp-backend/app/services/: image_processor.py
stamp-frontend/: package.json  pnpm-lock.yaml
stamp-frontend/src/: App.tsx
stamp-frontend/src/components/: FileUpload.tsx  StampControls.tsx
